<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_cv_builder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="CVBuilder"
        android:text="@string/cv_builder" />

    <Button
        android:id="@+id/btn_cv_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="EditCV"
        android:text="@string/edit_cv" />

    <Button
        android:id="@+id/btn_search_worker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SearchWorker"
        android:text="@string/search_worker" />

</LinearLayout>